style: fixed height of footer on smaller window sizes
updated an issue with the footer when shrinking the browser height, content will overflow the footer as it gets smaller.

--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -2,7 +2,7 @@
     background-color: #232323;
     color: white;
     width: 100%;
-    height: 16svh;
+    height: 25%;
     display: flex;
     align-items: center;
     justify-content: space-between;
